[package]

name = "acronymy"
version = "0.0.1"
authors = [ "David Renshaw <dwrenshaw@gmail.com>" ]
build = "build.rs"

[[bin]]

name = "acronymy"
path = "src/main.rs"

[[bin]]

name = "initdb"
path = "src/initdb.rs"

[dependencies.sqlite3]
git = "https://github.com/linuxfood/rustsqlite.git"

[build-dependencies.capnpc]
git = "https://github.com/dwrensha/capnpc-rust.git"

[dependencies]
url = "0.2.6"
time = "0.1.3"
gj = "*"

[dependencies.capnp]
git = "https://github.com/dwrensha/capnproto-rust.git"

[dependencies.capnp-rpc]
git = "https://github.com/dwrensha/capnp-rpc-rust.git"