[package]

name = "acronymy"
version = "0.0.1"
authors = [ "David Renshaw <dwrenshaw@gmail.com>" ]

[[bin]]

name = "acronymy"
path = "src/main.rs"

[[bin]]

name = "initdb"
path = "src/initdb.rs"

[dependencies.sqlite3]
git = "https://github.com/linuxfood/rustsqlite.git"

[build-dependencies]
capnpc = "0.7"

[dependencies]
url = "0.2.6"
time = "0.1.3"
gj = "0.2"
gjio = "0.1"
capnp = "0.7"
capnp-rpc = "0.7"
sandstorm = "*"